--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: space-evenly;
   gap: 30px;
-  background-color: rgb(238, 252, 255);
+  background-color: #ded7a0ad;
   min-height: 85vh;
 }
 
@@ -22,8 +22,8 @@
 
 .heading span {
   background-clip: text;
-  background-image: linear-gradient(to right, #239ce2, #1369b9);
-  color: transparent;
+  /* background-image: linear-gradient(to right, #239ce2, #1369b9); */
+  color: #898121;
 }
 
 .right img {
